# coiled-venv

./: .gitignore  README.md  pyproject.toml  setup.py
.github/workflows/: publish.yml  test.yml
coil/: __init__.py  __main__.py  config.py  db.py  shell.py  venv.py
